# wgpurenderer

./: .gitattributes  .gitignore  AI_CONTEXT.md  Cargo.toml  project.md  readme.md  rustfmt.toml
shaders/: shader.wgsl
src/: camera.rs  geometry.rs  lib.rs  main.rs  renderpass.rs  shader.rs  ssbo.rs  transform.rs  types.rs  uniform.rs  utils.rs
src/shader/: mod.rs
wgpurenderer/: Cargo.toml
wgpurenderer-macros/: Cargo.toml
wgpurenderer-macros/src/: lib.rs
wgpurenderer/shaders/: shader.wgsl
wgpurenderer/src/: camera.rs  lib.rs  main.rs  renderpass.rs  ssbo.rs  transform.rs  utils.rs
wgpurenderer/src/shader/: modules.rs
