[package]
name = "wgpurenderer"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "28.0.0"
glfw = { version = "0.61.0", features = ["raw-window-handle-v0-6"] }
pollster = "0.4.0"
env_logger = "0.11.9"
log = "0.4.29"
glam = { version = "0.32.0", features = ["bytemuck"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
smallvec = "1.15.1"
sorted-vec = "0.8.10"
nohash-hasher = "0.2.0"
