[workspace]
members = ["wgpurenderer", "wgpurenderer-macros"]
resolver = "3"

[workspace.dependencies]
wgpurenderer-macros = { path = "./wgpurenderer-macros" }
wgpu = { version = "28.0.0", default-features = false, features = [
    "vulkan",
    "parking_lot",
    "std",
    "wgsl",
] }
glfw = { version = "0.61.0", features = ["raw-window-handle-v0-6"] }
pollster = "0.4.0"
env_logger = "0.11.9"
log = "0.4.29"
glam = { version = "0.32.0", features = ["bytemuck"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
smallvec = { version = "1.15.1", features = ["union"] }
sorted-vec = "0.8.10"
nohash-hasher = "0.2.0"
rustc-hash = "2.1.1"
syn = "2.0.117"
quote = "1.0.44"
proc-macro2 = "1.0.106"
